# MiniWeb

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  install.sh  main  main.c  ТЗ
include/: mime.h  request.h  response.h  server.h
src/: mime.c  request.c  response.c  server.c
static/: index.html
